--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@ li {
 
 <h2>📝 Notas públicas anónimas</h2>
 
-<input id="nombre" placeholder="Nombre (opcional)">
-<textarea id="nota" placeholder="Escribe tu mensaje..."></textarea>
+<input id="nombre" placeholder="NOMBRE DE LA AUTORIDAD, PERSONA, INGENIERO, ALUMNO CORRUPTO">
+<textarea id="nota" placeholder="Relata lo sucedido y no olvides subir evidencias ! "></textarea>
 <button onclick="guardar()">Publicar</button>
 
 <div id="mensajeOk">✅ Publicado correctamente</div>
@@ -204,5 +204,6 @@ cargar();
 
 </body>
 </html>
+
 
 
