--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ li {
 📤 Subir evidencias
 </a>
 
-<h2>📝 Notas públicas anónimas</h2>
+<h2>Confesiones Sobre Casos Corruptos Anonimas UG </h2>
 
 <input id="nombre" placeholder="NOMBRE DE LA AUTORIDAD, PERSONA, INGENIERO, ALUMNO CORRUPTO">
 <textarea id="nota" placeholder="Relata lo sucedido y no olvides subir evidencias ! "></textarea>
@@ -204,6 +204,7 @@ cargar();
 
 </body>
 </html>
+
 
 
 
